# GreenSocket.io

./: .gitignore  Cargo.toml
client/: Cargo.toml
engine/: Cargo.toml
engine/protocol/: Cargo.toml
engine/protocol/src/encoding/: mod.rs  options.rs
engine/protocol/src/packet/: mod.rs
engine/protocol/src/tests/encoding/: options.rs
engine/protocol/src/tests/packet/: mod.rs
engine/src/: cookie.rs  cors.rs  lib.rs  server.rs
engine/src/protocol/: Cargo.toml  error.rs
engine/src/protocol/decoding/: mod.rs  options.rs
engine/src/protocol/encoding/: mod.rs  options.rs
engine/src/protocol/packet/: mod.rs  options.rs  types.rs
engine/src/protocol/tests/decoding/: mod.rs  options.rs
engine/src/protocol/tests/encoding/: mod.rs  options.rs
engine/src/protocol/tests/packet/: mod.rs  options.rs  types.rs
engine/src/server/: mod.rs
engine/src/transports/: mod.rs  transport.rs
engine_client/: .gitignore  Cargo.toml  LICENSE_MIT
engine_client/src/: lib.rs
engine_parser/: Cargo.toml
engine_parser/src/: constants.rs  decode.rs  decoding_stream.rs  encode.rs  encoding_stream.rs  event_emitter.rs  lib.rs  packet.rs
event_emitter/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: constants.rs  error.rs  lib.rs
protocol/src/decoding/: mod.rs  options.rs
protocol/src/packet/: decode.rs  decoding_stream.rs  error.rs  mod.rs  options.rs  types.rs
protocol/src/packet/options/: decode.rs  encode.rs  mod.rs
protocol/src/parser/: encode.rs  error.rs  mod.rs
protocol/src/parser/decoding/: mod.rs  options.rs
protocol/src/parser/encoding/: mod.rs  mods.rs  options.rs
protocol/src/tests/: encoding_tests.rs  mod.rs
protocol/src/tests/decoding/: mod.rs  options.rs
protocol/src/tests/encoding/: mod.rs
protocol/src/tests/packet/: options.rs
protocol/src/tests/parser/encoding/: mod.rs
shared/: Cargo.toml
socket/: Cargo.toml
socket_client/: Cargo.toml
socket_parser/: Cargo.toml
(+21 files in other folders)
