[workspace]
members = [
    "engine",
    "engine_client",
    "engine_parser",
    "socket",
    "socket_client",
    "socket_parser",
]
resolver = "2"

[workspace.package]
authors = ["Jesse Greenough"]
description = "Socket.io Implementation"


[workspace.dependencies]
base64 = "0.22"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.40.0"
