[package]
name = "green-engine"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors.workspace = true
description = "A Rust implementation of Socket.io's Engine"

[dependencies]
base64 = "0.22.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.48.0"
