[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
futures = "0.3.31"
pin-project = "1.1.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
